--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,4 +2,6 @@
 @import './reset.css';
 
 @import './components/cart.css';
+@import './components/dashboard-layout.css';
+@import './components/variant-panel.css';
 @import './components/header.css';
