--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,7 @@
 @import './main.css';
 @import './reset.css';
 
+@import './components/button.css';
 @import './components/cart.css';
 @import './components/dashboard-layout.css';
 @import './components/variant-panel.css';
