create FlavorPanel & display flavor's variant

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,5 +4,6 @@
 @import './components/button.css';
 @import './components/cart.css';
 @import './components/dashboard-layout.css';
+@import './components/flavor-panel.css';
 @import './components/variant-panel.css';
 @import './components/header.css';
