adjust VariantPanel styles

--- a/src/styles/components/flavor-panel.css
+++ b/src/styles/components/flavor-panel.css
@@ -1,12 +1,13 @@
-.flavors {
+.flavor-panel {
   background-color: #fff;
   margin-right: 40px;
   padding: 18px;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  overflow-y: scroll;
 }
 
-.flavors-content {
+.flavor-content {
   display: flex;
 }
 
