--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@
 
 @import './components/button.css';
 @import './components/cart.css';
+@import './components/cart-panel.css';
 @import './components/dashboard-layout.css';
 @import './components/flavor-panel.css';
 @import './components/variant-panel.css';
