--- a/src/styles/components/flavor-panel.css
+++ b/src/styles/components/flavor-panel.css
@@ -1,14 +1,34 @@
 .flavor-panel {
-  background-color: #fff;
-  margin-right: 40px;
-  padding: 18px;
+  grid-area: 1 / 2 / 2 / 3;
+  background-color: var(--color-white);
+  padding: 8px;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
   overflow-y: scroll;
 }
+.flavor-title {
+  margin-top: 8px;
+  margin-bottom: 16px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.flavor-selected {
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+
+.flavor-selected img {
+  width: 30px;
+  margin-right: 8px;
+}
 
 .flavor-content {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .flavor {
