--- a/src/styles/components/variant-panel.css
+++ b/src/styles/components/variant-panel.css
@@ -1,10 +1,17 @@
 .variant-panel {
+  grid-area: 1 / 1 / 2 / 2;
   background-color: var(--color-white);
-  margin-right: 40px;
-  padding: 18px;
+  padding: 8px;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
   overflow-y: scroll;
+}
+
+.variant-title {
+  margin-top: 8px;
+  margin-bottom: 16px;
+  font-size: 24px;
+  font-weight: 600;
 }
 
 .variant {
